argocd/external-services/sonarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-sonarr
        port: 30027
      middlewares:
      - name: private-ips-allow
        namespace: traefik
  tls:
    secretName: ext-cert-sonarr
